<resources>
    <string name="app_name">ChatMosphere</string>
    <string name="greet">Welcome Back !</string>
    <string name="login_propose">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="fname">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="back_to_login">Back To Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_usr">Email:</string>
    <string name="name_usr">Name:</string>
    <string name="prof">Profile</string>
    <string name="select_user">Select User</string>
    <string name="about_yourself">About yourself</string>
    <string name="search">Search</string>
    <string name="type_msg">Type a message</string>
    <string name="log_out">LOGOUT</string>
    <string name="online_usr">online</string>
    <string name="app_ico">app_icon</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="forgot_msg">Forgot your password ?</string>
    <string name="verify_msg">You need to verify first</string>
    <string name="send_link">Send login link</string>
    <string name="desc_pol">We don\'t collect any personal information like email, passwords or any kind of chat history.\n\n\n [ + ] Data Security and Retention\n\nWe have implemented appropriate technical and organizational measures to protect the security of your information. However, no method of transmission over the Internet or method of electronic storage is completely secure.</string>
    <string name="dev_mine">Developed By\nPurnendu Guha</string>
    <string name="priv">Privacy Policy</string>
    <string name="aboutc">Know More</string>
    <string name="google_signin">Continue With Google</string>
    <string name="other_sign_in_option">Other Sign In Option</string>
    <string name="good_morning">Good Morning !</string>
    <string name="good_afternoon">Good Afternoon !</string>
    <string name="good_evening">Good Evening !</string>
    <string name="user_profile">User Profile</string>
    <string name="user_id">"User ID: "</string>
    <string name="profile_image">Profile Photo</string>
    <string name="check_source_code_on_github">Check Source Code on GitHub</string>
    <string name="arrow">arrow</string>
    <string name="profile_image_head">Profile Image</string>
    <string name="img_up">img_up</string>
    <string name="chat_protection">Chat Protection</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="about_this_app">Know More</string>
    <string name="new_email">New Email</string>
    <string name="current_password">Current Password</string>
    <string name="old_email">Current Email</string>
    <string name="new_password">New Password</string>
    <string name="current_email">Current Email</string>
    <string name="old_password">Old Password</string>
    <string name="message_was_deleted">This message was deleted</string>
    <string name="message_was_deleted_cp">Something was deleted</string>
    <string name="delete_account">Delete Account</string>
    <string name="not_an_active_user">Not an active user</string>
    <string name="proceed_button">Proceed</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_new">Forgot Password</string>
    <string name="s1">S1</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="s4">S4</string>
</resources>